Release v0.1.2
